--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <hr>
 
         <div class="metoocontainer">
-          <p class="metooinfo"> University task creating 10 moving posters in solidarity with the #MeToo <br>movement. </p>
+          <p class="metooinfo"> University task creating 10 moving posters in solidarity with the #MeToo movement. </p>
           <a class="metoo" href="metoo.html">
             <li class="limetoo"><img class="imgmetoo" src="imageshome/herbod.png">#MeToo</li>
           </a>
@@ -260,7 +260,7 @@
         <hr>
 
         <div class="outcontainer">
-          <p class="outinfo"> Interview with Joe Blandamer and Christopher Childs, professional stop <br> motion designers.
+          <p class="outinfo"> Interview with Joe Blandamer and Christopher Childs, professional stop motion designers.
 
           </p>
           <a class="out" href="outhere.html">
@@ -278,7 +278,7 @@
 
 
         <div class="knowcontainer">
-          <p class="knowinfo"> Publication based on personal interview with someone from another <br>country or culture. </p>
+          <p class="knowinfo"> Publication based on personal interview with someone from another country or culture. </p>
           <a class="know" href="knowing.html">
             <li class="liknow"><img class="imgknow" src="imageshome/imgknow.png">Knowing Me</li>
           </a>
@@ -296,45 +296,60 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="column">
-      <p>  Sound Project - A0 Poster (2022) </p>
+  <div class="container">
+    <!-- heading text -->
+    <div class="image-gallery">
+      <div class="column">
+        <div class="image-item">
+          <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+          <p>  Sound Project - My Workshop Poster (2022) </p>
 
-      <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
-      <p>  Sound Project - Conversation Leaflet (2021ß) </p>
 
-      <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
-      <p>  Sound Project - Oversized Poster (2021) </p>
+          <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
+          <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
 
-      <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
-      <img  src="imageshome/misc/head.png" alt="Alone Cover">
-      <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
-      <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
+          <img  src="imageshome/misc/head.png" alt="Alone Cover">
+          <p>  Sound Project - Headpiece (2021) </p>
 
+
+        </div>
+      </div>
+      <div class="column">
+        <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
+        <p>  Radio show commission (2022) </p>
+
+        <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
+        <p>  Sound Project - Famous quote A0 Poster (2022) </p>
+
+        <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
+        <p>  Sound Project - Conversation Leaflet (2021) </p>
+
+
+      </div>
+      <div class="column">
+        <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
+        <p>  Sound Project - Oversized poster(2021) </p>
+
+        <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
+        <p>  Sound Project - Discarded poster outcome (2022) </p>
+
+        <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
+        <p>  On My Radio (2020) </p>
+
+
+
+      </div>
     </div>
-
-    <div class="column">
-    <p>  Sound Project - Workshop poster (2022) </p>
-      <img style="width:100%;"  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
-      <p>  Sound Project - Discarded poster outcome (2022) </p>
-      <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
-      <p>  On My Radio (2020) </p>
-
-      <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
-
-    </div>
-    <div class="column">
-      <p>  Radio show commission (2022) </p>
-      <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
-      <p>  Sound Project - Headpiece (2021) </p>
-
-      <img  src="imageshome/misc/head.png" alt="Alone Cover">
-      <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
-      <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
+  </div>
 
 
-</div>
-    </div>
+
+
+
+
+
+
+
 
     <hr>
 
