--- a/index.html
+++ b/index.html
@@ -134,10 +134,8 @@
           </div>
         </div>
 
+<hr>
 
-
-
-        <hr>
         <div class="groundedcontainer">
           <p class="groundedinfo"> Motion piece creating &amp; animating characters based on foley sounds. </p>
           <a class="grounded" href="Grounded.html">
@@ -145,6 +143,18 @@
           </a>
           <div class="groundedaboutcontainer">
             <p class="groundedabout">2022</p>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="cymaticcontainer">
+          <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
+          <a class="cymatic" href="Cymatics.html">
+            <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
+          </a>
+          <div class="cymaticaboutcontainer">
+            <p class="cymaticabout">2022</p>
           </div>
         </div>
 
@@ -233,17 +243,6 @@
 
         <hr>
 
-        <div class="cymaticcontainer">
-          <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
-          <a class="cymatic" href="Cymatics.html">
-            <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
-          </a>
-          <div class="cymaticaboutcontainer">
-            <p class="cymaticabout">2022</p>
-          </div>
-        </div>
-
-        <hr>
 
 
         <div class="heatcontainer">
@@ -324,9 +323,10 @@
         <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
         <p>  Sound Project - Conversation Leaflet (2021) </p>
 
-
       </div>
       <div class="column">
+<video style="border-radius:5px;"src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+       <p>  Cut It Out (2020) </p>
         <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
         <p>  Sound Project - Oversized poster(2021) </p>
 
