--- a/Cymatics.html
+++ b/Cymatics.html
@@ -36,7 +36,7 @@
   <div Id="main">
         <div class="head">
         <h1> Cymatics </h1>
-        <div class="aboutcontainer"><p  class="about"> University task to create a video based on a family story. </p> </div>
+        <div class="aboutcontainer"><p  class="about"> Motion graphic work and prints depicting sound in a visual nature. </p> </div>
         <a href="CV/CV.pdf" target="_blank" download> </a>
         </div>
       </div>
@@ -127,13 +127,27 @@
   <iframe src="https://player.vimeo.com/video/730951920?h=0e59ab30c2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" title="CYMATIC"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 
-
-<div class="images">
-<img class="img" src="MEDIACYMATICS/1686.jpeg"> </li>
-<img class="img" src="MEDIACYMATICS/1687.jpeg"</li>
-<img class="img" src="MEDIACYMATICS/1688.jpeg"</li>
-<img class="img" src="MEDIACYMATICS/1689.jpeg"</li>
+  <div class="container">
+    <!-- heading text -->
+    <div class="image-gallery">
+      <div class="column">
+        <div class="image-item">
+          <img class="img" src="MEDIACYMATICS/1686.jpeg"> </li>
+          <img class="img" src="MEDIACYMATICS/1687.jpeg"</li>
 </div>
+      </div>
+      <div class="column">
+        <div class="image-item">
+          <img class="img" src="MEDIACYMATICS/1688.jpeg"</li>
+          <img class="img" src="MEDIACYMATICS/1689.jpeg"</li>
+
+      </div>
+</div>
+
+
+      </div>
+    </div>
+
 
 <hr>
 
