--- a/Conqueer.html
+++ b/Conqueer.html
@@ -135,30 +135,34 @@
 
 
 
+    <div class="container">
+      <!-- heading text -->
+      <div class="image-gallery">
+        <div class="column">
+          <div class="image-item">
+            <img src="MEDIACONQ/CONQUEER.png" alt="">
+            <video  src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
+            <img style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
 
-
-  <div class="row">
-    <div class="column">
-      <img  src="MEDIACONQ/CONQUEER.png" alt="">
-      <img style="width:100%;height:30%;"class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
-      <img style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
-
-    </div>
-
-    <div class="column">
-      <video class="movingsword" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-      <video class="movingthey" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-      <img style="width:90%" src="MEDIACONQ/sign.jpg" alt=""></img>
-
-    </div>
-
-
-  </div>
-
-
-  </div>
 </div>
+        </div>
+        <div class="column">
+          <div class="image-item">
+          <video style="border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+          <img  src="MEDIACONQ/sign.jpg" alt=""></img>
+          <img style="width:100%;height:30%;"class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
+
+        </div>
+</div>
+
+
+        </div>
+      </div>
+
+
+
+
 
 
 <hr>
@@ -171,7 +175,7 @@
 </div>
 
 </div>
-
+</div>
 
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
