--- a/index.html
+++ b/index.html
@@ -122,8 +122,19 @@
           </div>
         </div>
 <div> </div>
-        <hr>
 
+        <hr>
+        <div class="fuzecontainer">
+          <p class="fuzeinfo"> Ongoing motion/graphic design work for FUZE Bristol. </p>
+          <a class="fuze" href="fuze.html">
+            <li class="lifuze"><img class="imgfuze" src="imageshome/plug.png">FUZE </li>
+          </a>
+          <div class="fuzeboutcontainer">
+            <p class="fuzebout">2022</p>
+          </div>
+        </div>
+
+<hr>
         <div class="wigcontainer">
           <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
           <a class="wig" href="wig.html">
@@ -296,10 +307,10 @@
   </div>
 
   <div class="container">
-    <!-- heading text -->
     <div class="image-gallery">
       <div class="column">
         <div class="image-item">
+
           <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
           <p>  Sound Project - My Workshop Poster (2022) </p>
 
