--- a/wig.html
+++ b/wig.html
@@ -6,9 +6,9 @@
   <title>Kailan Walsh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles/stylesconq.css">
+  <link rel="stylesheet" href="styles/styleswig.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -42,12 +42,16 @@
 
     <!-- Use any element to open the sidenav -->
     <div class="opencon">
-    <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
-<div id="main">
+      <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
+        <path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z" /></svg>
+    </div>
+    <div id="main">
       <div class="head">
-      <h1 style="width:210px; margin-right:0px;"> When It's Gone </h1>
-      <div class="aboutcontainer"><p  class="about"> CD booklet created to highlight the importance of earplugs when clubbing.</p> </div>
-      <a href="CV/CV.pdf" target="_blank" download> </a>
+        <h1 style="width:210px; margin-right:0px;"> When It's Gone </h1>
+        <div class="aboutcontainer">
+          <p class="about"> CD booklet created to highlight the importance of earplugs when clubbing.</p>
+        </div>
+        <a href="CV/CV.pdf" target="_blank" download> </a>
       </div>
 
     </div>
@@ -128,64 +132,79 @@
   </div>
 
 
-    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-    <div id="main2">
+  <div id="main2">
+
+    <div class="container">
+      <div class="image-gallery">
+        <div class="column">
+          <div class="image-item">
+
+            <img style="width:25em; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
+            <img style="width:25em; height:30em;" src="MEDIAWIG/3.png" alt="Alone Cover">
+            <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
+
+
+          </div>
+        </div>
+
+        <div class="column">
+
+          <img style="width:25em; height:30em;" src="MEDIAWIG/1.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
+
+        </div>
+
+        <div class="column">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/9.png" alt="Alone Cover">
 
 
 
-    <div class="row">
-      <div class="column">
-        <img  src="MEDIAWIG/0.png" alt="Alone Cover">
-<img  src="MEDIAWIG/3.png" alt="Alone Cover">
-<img rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
-
+        </div>
       </div>
-      <div class="column">
-        <img  src="MEDIAWIG/1.png" alt="Alone Cover">
-        <img rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
-        <img rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
-      </div>
-      <div class="column">
-        <img rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
-        <img rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
-        <img rotate="90" src="MEDIAWIG/9.png" alt="Alone Cover">
-</div>
-      </div>
-  <div class="column">
+    </div>
+
+
+
+
+
+
+
+
+    <div style=" margin: 3%;padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730834898?h=b622aea3bb&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+        allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+    <hr>
+
+    <div class="bottom">
+
+      <form>
+        <input type="button" value="Go back!" onclick="history.back()">
+      </form>
+      <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+    </div>
 
   </div>
+  <script>
+    /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+      document.getElementById("main2").style.marginLeft = "250px";
+    }
 
-
-
-
-
-
-<div style=" margin: 3%;padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730834898?h=b622aea3bb&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-<hr>
-
-<div class="bottom">
-
-  <form>
-   <input type="button" value="Go back!" onclick="history.back()">
-  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
-</div>
-
-</div>
-<script>
-/* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-  document.getElementById("main2").style.marginLeft = "250px";
-}
-
-/* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-  document.getElementById("main2").style.marginLeft = "0";}  </script>
+    /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("main").style.marginLeft = "0";
+      document.getElementById("main2").style.marginLeft = "0";
+    }
+  </script>
 
 </body>
 
