--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="fuzecontainer">
           <p class="fuzeinfo"> Ongoing motion/graphic design work for FUZE Bristol. </p>
           <a class="fuze" href="fuze.html">
-            <li class="lifuze"><img class="imgfuze" src="imageshome/plug.png">FUZE </li>
+            <li class="lifuze"><img class="imgfuze" src="imageshome/flyer1.png">FUZE </li>
           </a>
           <div class="fuzeboutcontainer">
             <p class="fuzebout">2022</p>
@@ -311,44 +311,47 @@
       <div class="column">
         <div class="image-item">
 
-          <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
           <p>  Sound Project - My Workshop Poster (2022) </p>
+          <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
 
-
-          <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
           <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
+          <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
 
+    <p>  Sound Project - Headpiece (2021) </p>
           <img  src="imageshome/misc/head.png" alt="Alone Cover">
-          <p>  Sound Project - Headpiece (2021) </p>
+
 
 
         </div>
       </div>
       <div class="column">
-        <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
+        <div class="image-item">
+
         <p>  Radio show commission (2022) </p>
+        <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
 
-        <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
         <p>  Sound Project - Famous quote A0 Poster (2022) </p>
+        <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
 
-        <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
         <p>  Sound Project - Conversation Leaflet (2021) </p>
+        <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
 
       </div>
+    </div>
       <div class="column">
+        <div class="image-item">
+
+        <p>  Cut It Out (2020) </p>
 <video style="border-radius:5px;"src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
-       <p>  Cut It Out (2020) </p>
-        <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
-        <p>  Sound Project - Oversized poster(2021) </p>
 
-        <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
         <p>  Sound Project - Discarded poster outcome (2022) </p>
+        <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
 
-        <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
         <p>  On My Radio (2020) </p>
+        <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
 
 
-
+      </div>
       </div>
     </div>
   </div>
