--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="wigcontainer">
           <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
           <a class="wig" href="wig.html">
-            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">When It's Gone</li>
+            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">Plug In</li>
           </a>
           <div class="wigboutcontainer">
             <p class="wigbout">2022</p>
