--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 
 
-  <div class="sticky"> <div class="name">Kailan Walsh</div>
-  <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
+  <div class="sticky">
+    <div class="name">Kailan Walsh</div>
+    <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
     <a href="CV/CV.pdf" target="_blank" download="" style="
   /* display: flex; */
     /* width: 300px; */
@@ -121,7 +122,7 @@
             <p class="conqabout">2021-2022</p>
           </div>
         </div>
-<div> </div>
+        <div> </div>
 
         <hr>
         <div class="fuzecontainer">
@@ -134,7 +135,7 @@
           </div>
         </div>
 
-<hr>
+        <hr>
         <div class="wigcontainer">
           <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
           <a class="wig" href="wig.html">
@@ -145,7 +146,7 @@
           </div>
         </div>
 
-<hr>
+        <hr>
 
         <div class="groundedcontainer">
           <p class="groundedinfo"> Motion piece creating &amp; animating characters based on foley sounds. </p>
@@ -191,7 +192,7 @@
           align-content: center;
           text-align: justify;
           flex-direction: column-reverse;
-          justify-content: center;"class="talltalesinfo"> University task to create a video based on a family story. </p>
+          justify-content: center;" class="talltalesinfo"> University task to create a video based on a family story. </p>
           <a class="talltales" href="talltales.html">
             <li class="litalltales"><img class="imgtalltales" src="imageshome/steph.png">Tall Tales</li>
           </a>
@@ -202,22 +203,6 @@
 
         <hr>
 
-        <div class="metoocontainer">
-          <p class="metooinfo"> University task creating 10 moving posters in solidarity with the #MeToo movement. </p>
-          <a class="metoo" href="metoo.html">
-            <li class="limetoo"><img class="imgmetoo" src="imageshome/herbod.png">#MeToo</li>
-          </a>
-          <div class="metooboutcontainer">
-            <p class="metoobout">2021</p>
-          </div>
-        </div>
-
-
-
-        <hr>
-
-
-
 
 
         <div class="deepincontainer">
@@ -226,7 +211,7 @@
           align-content: center;
           text-align: justify;
           flex-direction: column-reverse;
-          justify-content: center;"class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
+          justify-content: center;" class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
           <a class="deepin" href="deepin.html">
             <li class="lideepin"><img class="imgdeepin" src="imageshome/deep.png">Deep Inside</li>
           </a>
@@ -300,7 +285,7 @@
 
 
         <hr>
-          <li class="top"> Selected Artwork (2020-2022) </li>
+        <li class="top"> Selected Artwork (2020-2022) </li>
 
       </ul>
     </div>
@@ -311,14 +296,14 @@
       <div class="column">
         <div class="image-item">
 
-          <p>  Sound Project - My Workshop Poster (2022) </p>
-          <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+          <p> Sound Project - My Workshop Poster (2022) </p>
+          <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
 
-          <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
-          <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
+          <p> Sound Project - 20 Sound Synonym Poster (2021) </p>
+          <img src="imageshome/misc/20list.jpg" alt="Alone Cover">
 
-    <p>  Sound Project - Headpiece (2021) </p>
-          <img  src="imageshome/misc/head.png" alt="Alone Cover">
+          <p> Sound Project - Headpiece (2021) </p>
+          <img src="imageshome/misc/head.png" alt="Alone Cover">
 
 
 
@@ -327,31 +312,33 @@
       <div class="column">
         <div class="image-item">
 
-        <p>  Radio show commission (2022) </p>
-        <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
+          <p> Radio show commission (2022) </p>
+          <img src="imageshome/misc/ROOM5.png" alt="Alone Cover">
 
-        <p>  Sound Project - Famous quote A0 Poster (2022) </p>
-        <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
+          <p> Sound Project - Famous quote A0 Poster (2022) </p>
+          <img src="imageshome/misc/QUOTE.png" alt="Alone Cover">
 
-        <p>  Sound Project - Conversation Leaflet (2021) </p>
-        <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
+          <p> MeToo (2020) </p>
+          <video autoplay muted loop class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
+        </div>
       </div>
-    </div>
       <div class="column">
         <div class="image-item">
 
-        <p>  Cut It Out (2020) </p>
-<video style="border-radius:5px;"src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+          <p> Cut It Out (2020) </p>
+          <video style="border-radius:5px;" src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
-        <p>  Sound Project - Discarded poster outcome (2022) </p>
-        <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
+          <p> Sound Project - Discarded poster outcome (2022) </p>
+          <img src="imageshome/misc/ear.jpeg" alt="Alone Cover">
 
-        <p>  On My Radio (2020) </p>
-        <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
+          <p> On My Radio (2020) </p>
+          <img src="imageshome/misc/6.jpg" alt="Alone Cover">
 
 
-      </div>
+
+
+        </div>
       </div>
     </div>
   </div>
@@ -365,15 +352,15 @@
 
 
 
-    <hr>
+  <hr>
 
-    <div class="bottom">
+  <div class="bottom">
 
-      <a href="index.html">
-        <p class="top"> Back to top ↑ </p>
-      </a>
+    <a href="index.html">
+      <p class="top"> Back to top ↑ </p>
+    </a>
 
-  <script language="javascript" src="myScript.js"></script>
+    <script language="javascript" src="myScript.js"></script>
 
 
 
