--- a/wig.html
+++ b/wig.html
@@ -142,28 +142,33 @@
         <div class="column">
           <div class="image-item">
 
-            <img style="width:23em; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
-            <img style="width:23em; height:30em;" src="MEDIAWIG/3.png" alt="Alone Cover">
-            <img style="width:23em; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
+            <img style="width:25em; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
+            <img style="width:25em; height:30em;" src="MEDIAWIG/3.png" alt="Alone Cover">
+            <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
 
 
           </div>
         </div>
 
         <div class="column">
+          <div class="image-item">
 
-          <img style="width:23em; height:30em;" src="MEDIAWIG/1.png" alt="Alone Cover">
-          <img style="width:23em; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
-          <img style="width:23em; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
+
+          <img style="width:25em; height:30em;" src="MEDIAWIG/1.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
 
         </div>
+      </div>
 
         <div class="column">
-          <img style="width:23em; height:30em;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
-          <img style="width:23em; height:30em;" rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
+          <div class="image-item">
+
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
+          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
 
 
-
+</div>
         </div>
       </div>
     </div>
