--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="wigcontainer">
           <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
           <a class="wig" href="wig.html">
-            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">Plug In</li>
+            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">Plug-In</li>
           </a>
           <div class="wigboutcontainer">
             <p class="wigbout">2022</p>
@@ -307,6 +307,7 @@
 
 
 
+
         </div>
       </div>
       <div class="column">
@@ -320,6 +321,9 @@
 
           <p> MeToo (2020) </p>
           <video autoplay muted loop class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
+
+          <p> Sliderfy - Silder Mockup Custom Design (2021) </p>
+          <img src="imageshome/misc/slidegreen.jpg" alt="Alone Cover">
 
         </div>
       </div>
