--- a/wig.html
+++ b/wig.html
@@ -47,7 +47,7 @@
     </div>
     <div id="main">
       <div class="head">
-        <h1 style="width:210px; margin-right:0px;"> When It's Gone </h1>
+        <h1 style="width:210px; margin-right:0px;"> Plug-In </h1>
         <div class="aboutcontainer">
           <p class="about"> CD booklet created to highlight the importance of earplugs when clubbing.</p>
         </div>
