--- a/wig.html
+++ b/wig.html
@@ -142,9 +142,9 @@
         <div class="column">
           <div class="image-item">
 
-            <img style="width:25em; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
-            <img style="width:25em; height:30em;" src="MEDIAWIG/3.png" alt="Alone Cover">
-            <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
+            <img style="width:100%; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
+            <img style="width:100%; height:30em;" src="MEDIAWIG/3.png" alt="Alone Cover">
+            <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
 
 
           </div>
@@ -154,9 +154,9 @@
           <div class="image-item">
 
 
-          <img style="width:25em; height:30em;" src="MEDIAWIG/1.png" alt="Alone Cover">
-          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
-          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
+          <img style="width:100%; height:30em;" src="MEDIAWIG/1.png" alt="Alone Cover">
+          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
+          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
 
         </div>
       </div>
@@ -164,8 +164,8 @@
         <div class="column">
           <div class="image-item">
 
-          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
-          <img style="width:25em; height:30em;" rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
+          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
+          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
 
 
 </div>
