--- a/Conqueer.html
+++ b/Conqueer.html
@@ -140,18 +140,19 @@
       <div class="image-gallery">
         <div class="column">
           <div class="image-item">
+            <img src="MEDIACONQ/IGFIN2.png" alt="">
             <img src="MEDIACONQ/CONQUEER.png" alt="">
-            <video  src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
-            <img style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
+            <img style="width: 100%; height: 100%;"style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
 
 </div>
         </div>
         <div class="column">
           <div class="image-item">
-          <video style="border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+          <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
           <img  src="MEDIACONQ/sign.jpg" alt=""></img>
-          <img style="width:100%;height:30%;"class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
+          <img style="width: 100%; height: 100%;;"class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
+          <video  style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
         </div>
 </div>
