--- a/fuze.html
+++ b/fuze.html
@@ -133,23 +133,31 @@
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-
+<div class="container">
+  <div style="margin-right:10px;"class="imgtop">
+    <img width="450px" height="650px"src="MEDIAFUZE/flyer1.png" alt="">
+</div>
 
     <div class="container">
       <!-- heading text -->
       <div class="image-gallery">
         <div class="column">
           <div class="image-item">
-            <img width="750px" height="500px"src="MEDIAFUZE/flyer1.png" alt="">
-
+</div>
+</div>
 </div>
 
 
         </div>
-      </div>
-</div>
 
-
+        <div class="column">
+          <div class="image-item">
+          <img src="MEDIAFUZE/HEADER5.png" alt="">
+          <img src="MEDIAFUZE/GRAPHIC.png" alt="">
+</DIV>
+</DIV>
+</DIV>
+</DIV>
 
 
 
