--- a/fuze.html
+++ b/fuze.html
@@ -135,7 +135,9 @@
 <div class="concontainer">
 <div class="container">
   <div style="margin-right:10px;"class="imgtop">
-    <img width="450px" height="650px"src="MEDIAFUZE/flyer1.png" alt="">
+    <img width="100%" height="100%"src="MEDIAFUZE/REDLIGHT.png" alt="">
+
+
 </div>
 </div>
 
@@ -152,9 +154,22 @@
         </div>
 
         <div class="column">
-          <div class="image-item">
-          <img src="MEDIAFUZE/HEADER5.png" alt="">
+          <div     style="display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;"
+} class="image-item">
+
+            <video style="width: 50% ; height: 50%; border-radius:5px;" src="MEDIAFUZE/REDLIGHTMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <img style="width: 50%; height=100%; margin-bottom: 5%;" src="MEDIAFUZE/A3.png" alt="">
+            <img src="MEDIAFUZE/MAP.png"; style="width: 50%" style="border-radius:5px; margin:5%;"alt="">
+            <video style="width: 50% ; height: 50%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <img src="MEDIAFUZE/flyer1.png"; style="width: 50%; margin: 5%;" alt="">
+
+          <img style="margin-bottom: 5%;"src="MEDIAFUZE/HEADER5.png" alt="">
           <img src="MEDIAFUZE/GRAPHIC.png" alt="">
+
 </DIV>
 </DIV>
 </DIV>
