--- a/heat.html
+++ b/heat.html
@@ -26,6 +26,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
+      <a href="fuze.html">FUZE</a>
       <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
