--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@
         <div class="image-item">
 
           <p> Sound Project - My Workshop Poster (2022) </p>
+
+          <video style="border-radius:5px;" src="VIDEO/NUMERIS.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
+          <p> Sound Project - My Workshop Poster (2022) </p>
           <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
 
           <p> Sound Project - 20 Sound Synonym Poster (2021) </p>
