--- a/Conqueer.html
+++ b/Conqueer.html
@@ -22,6 +22,7 @@
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
+      <a href="fuze.html">FUZE</a>
       <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
@@ -138,21 +139,22 @@
     <div class="container">
       <!-- heading text -->
       <div class="image-gallery">
-        <div class="column">
+        <div style="width: 100%;" class="column">
           <div class="image-item">
+            <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <img src="MEDIACONQ/IGFIN2.png" alt="">
             <img src="MEDIACONQ/CONQUEER.png" alt="">
-
-            <img style="width: 100%; height: 100%;"style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
+            <video  style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
 </div>
         </div>
-        <div class="column">
+        <div style="width: 100%;" class="column">
           <div class="image-item">
+            <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/ANNOUNCEMENT.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <img  src="MEDIACONQ/AHH.png" alt=""></img>
           <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-          <img  src="MEDIACONQ/sign.jpg" alt=""></img>
           <img style="width: 100%; height: 100%;;"class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
-          <video  style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+          <img style="width: 100%; height: 100%;"style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
 
         </div>
 </div>
