--- a/Grounded.html
+++ b/Grounded.html
@@ -20,6 +20,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
+        <a href="fuze.html">FUZE</a>
         <a href="Cymatics.html">Cymatics</a>
         <a href="AT.html">Act Together</a>
         <a href="talltales.html">Tall Tales</a>
