--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div class="column">
         <div class="image-item">
 
-          <p> Sound Project - My Workshop Poster (2022) </p>
+          <p> Numeris - Gift card animation (2023) </p>
 
           <video style="border-radius:5px;" src="VIDEO/NUMERIS.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
