--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </a>
 
           <div class="conqaboutcontainer">
-            <p class="conqabout">2021-2022</p>
+            <p class="conqabout">2021-2023</p>
           </div>
         </div>
         <div> </div>
@@ -131,7 +131,7 @@
             <li class="lifuze"><img class="imgfuze" src="imageshome/flyer1.png">FUZE </li>
           </a>
           <div class="fuzeboutcontainer">
-            <p class="fuzebout">2022</p>
+            <p class="fuzebout">2022-2023</p>
           </div>
         </div>
 
