--- a/alone.html
+++ b/alone.html
@@ -6,7 +6,7 @@
   <title>Kailan Walsh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles/stylesconq.css">
+  <link rel="stylesheet" href="styles/alone.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
@@ -17,26 +17,20 @@
 
 
 
-  <div class="sticky" style="    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;">
+  <div class="sticky">
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
       <a href="fuze.html">FUZE</a>
-      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
-      <a href="metoo.html">#MeToo</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
-      <a href="wig.html">When It's Gone</a>
+      <a href="wig.html">Plug-In</a>
       <a href="heat.html">Heat Death</a>
       <a href="outhere.html">Out There</a>
-      <a href="#knowing.html">Knowing Me, Knowing You</a>
 
     </div>
 
