--- a/deepin.html
+++ b/deepin.html
@@ -15,22 +15,17 @@
   <body>
 
 
-    <div class="sticky" style="    display: flex;
-      align-content: center;
-      justify-content: center;
-      align-items: center;">
+    <div class="sticky">
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
         <a href="fuze.html">FUZE</a>
-        <a href="cymatics.html">Cymatics</a>
         <a href="Grounded.html">Grounded</a>
         <a href="AT.html">Act Together</a>
         <a href="talltales.html">Tall Tales</a>
-        <a href="metoo.html">#MeToo</a>
         <a href="alone.html">Alone Zine</a>
-        <a href="wig.html">When It's Gone</a>
+        <a href="wig.html">Plug-In</a>
         <a href="heat.html">Heat Death</a>
         <a href="outhere.html">Out There</a>
         <a href="knowing.html">Knowing Me, Knowing You</a>
