--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="styles/index.css">
   <title>Kailan Walsh</title>
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -158,17 +160,6 @@
           </div>
         </div>
 
-        <hr>
-
-        <div class="cymaticcontainer">
-          <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
-          <a class="cymatic" href="Cymatics.html">
-            <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
-          </a>
-          <div class="cymaticaboutcontainer">
-            <p class="cymaticabout">2022</p>
-          </div>
-        </div>
 
         <hr>
 
@@ -272,19 +263,6 @@
 
 
 
-        <div class="knowcontainer">
-          <p class="knowinfo"> Publication based on personal interview with someone from another country or culture. </p>
-          <a class="know" href="knowing.html">
-            <li class="liknow"><img class="imgknow" src="imageshome/imgknow.png">Knowing Me</li>
-          </a>
-          <div class="knowboutcontainer">
-            <p class="knowbout">2020</p>
-
-          </div>
-        </div>
-
-
-        <hr>
         <li class="top"> Selected Artwork (2020-2022) </li>
 
       </ul>
@@ -303,12 +281,10 @@
           <p> Sound Project - My Workshop Poster (2022) </p>
           <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
 
-          <p> Sound Project - 20 Sound Synonym Poster (2021) </p>
-          <img src="imageshome/misc/20list.jpg" alt="Alone Cover">
 
-          <p> Sound Project - Headpiece (2021) </p>
-          <img src="imageshome/misc/head.png" alt="Alone Cover">
 
+          <p> MeToo (2020) </p>
+          <video autoplay muted loop class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
 
 
@@ -326,6 +302,9 @@
           <p> MeToo (2020) </p>
           <video autoplay muted loop class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
+          <p> MeToo (2020) </p>
+          <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
+
           <p> Sliderfy - Silder Mockup Custom Design (2021) </p>
           <img src="imageshome/misc/slidegreen.jpg" alt="Alone Cover">
 
@@ -334,8 +313,13 @@
       <div class="column">
         <div class="image-item">
 
+
           <p> Cut It Out (2020) </p>
           <video style="border-radius:5px;" src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
+          <p> Vault Records(2022) </p>
+          <video autoplay muted loop class="first" src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
+
 
           <p> Sound Project - Discarded poster outcome (2022) </p>
           <img src="imageshome/misc/ear.jpeg" alt="Alone Cover">
