--- a/talltales.html
+++ b/talltales.html
@@ -13,19 +13,14 @@
   </head>
   <body>
 
-    <div class="sticky" style="    display: flex;
-      align-content: center;
-      justify-content: center;
-      align-items: center;">
+    <div class="sticky" >
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
         <a href="fuze.html">FUZE</a>
-        <a href="Cymatics.html">Cymatics</a>
         <a href="Grounded.html">Grounded</a>
         <a href="AT.html">Act Together</a>
-        <a href="metoo.html">#MeToo</a>
         <a href="deepin.html">Deep Inside</a>
         <a href="alone.html">Alone Zine</a>
         <a href="wig.html">When It's Gone</a>
@@ -39,15 +34,23 @@
       <div class="opencon">
       <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
 
-  <div Id="main">
+  <div id="main">
         <div class="head">
-        <h1 style="width:130px;"> Tall Tales </h1>
-        <div class="aboutcontainer"><p  class="about" style="width:390px"> University task to create a video based on a family story. </p> </div>
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <h1 style="width: 150px;"> Tall Tales </h1>
+
+        <div class="aboutcontainer">
+          <p  class="about"> University task to create a video based on a family story. </p>
         </div>
+
+        <a href="CV/CV.pdf" target="_blank" download></a>
+        </div>
+
       </div>
 
-      <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
+      <div class="iconcon">
+        <div class="icon"><a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
+      </div>
+
 
       <a href="CV/CV.pdf" target="_blank" download="" style="
     /* display: flex; */
@@ -126,7 +129,7 @@
       <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-      <div Id="main2">
+      <div id="main2">
 
 
       <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
