--- a/wig.html
+++ b/wig.html
@@ -16,28 +16,19 @@
 </head>
 
 <body>
-
-
-
-  <div class="sticky" style="    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;">
+  <div class="sticky">
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
       <a href="fuze.html">FUZE</a>
-      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
-      <a href="metoo.html">#MeToo</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
       <a href="heat.html">Heat Death</a>
       <a href="outhere.html">Out There</a>
-      <a href="#knowing.html">Knowing Me, Knowing You</a>
 
     </div>
 
@@ -48,7 +39,7 @@
     </div>
     <div id="main">
       <div class="head">
-        <h1 style="width:210px; margin-right:0px;"> Plug-In </h1>
+        <h1 style="width:100px; margin-right:0px;"> Plug-In </h1>
         <div class="aboutcontainer">
           <p class="about"> CD booklet created to highlight the importance of earplugs when clubbing.</p>
         </div>
@@ -60,12 +51,9 @@
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
-  /* display: flex; */
-    /* width: 300px; */
     justify-content: flex-end;
     flex-direction: row;
     align-content: flex-end;
-    /* position: fixed; */
     flex-wrap: nowrap;">
       <div class="cv"> <svg>
           <!--?xml version="1.0" encoding="utf-8"?-->
@@ -144,7 +132,7 @@
           <div class="image-item">
 
             <img style="width:100%; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
-            <img style="width:100%; height:30em;" src="MEDIAWIG/3.png" alt="Alone Cover">
+            <img style="width:100%; " src="MEDIAWIG/3.png" alt="Alone Cover">
             <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
 
 
@@ -154,22 +142,20 @@
         <div class="column">
           <div class="image-item">
 
+            <img style="width:100%; " src="MEDIAWIG/1.png" alt="Alone Cover">
+            <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
+            <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
 
-          <img style="width:100%; height:30em;" src="MEDIAWIG/1.png" alt="Alone Cover">
-          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
-          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
-
+          </div>
         </div>
-      </div>
 
         <div class="column">
           <div class="image-item">
 
-          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
-          <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
+            <img style="width:100%;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
+            <img style="width:100%; " rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
 
-
-</div>
+          </div>
         </div>
       </div>
     </div>
