--- a/fuze.html
+++ b/fuze.html
@@ -8,56 +8,58 @@
 
   <link rel="stylesheet" href="styles/stylesfuze.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
 
-  <div class="sticky" style="    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;">
+  <div class="sticky">
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
-      <a href="Cymatics.html">Cymatics</a>
+      <a href="Conqueer.html">Conqueer</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
-      <a href="metoo.html">#MeToo</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
-      <a href="wig.html">When It's Gone</a>
+      <a href="wig.html">Plug-In </a>
       <a href="heat.html">Heat Death</a>
       <a href="outhere.html">Out There</a>
-      <a href="#knowing.html">Knowing Me, Knowing You</a>
 
     </div>
 
     <!-- Use any element to open the sidenav -->
     <div class="opencon">
-    <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
-<div id="main">
+      <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
+        <path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z" /></svg>
+    </div>
+
+    <div id="main">
       <div class="head">
-      <h1> FUZE </h1>
-      <div class="aboutcontainer"><p  class="about" style="width:400px;"> Ongoing motion/graphic design work for FUZE Bristol.</p> </div>
-      <a href="CV/CV.pdf" target="_blank" download> </a>
+        <h1>FUZE</h1>
+
+        <div class="aboutcontainer">
+          <p class="about"> Ongoing motion/graphic design work for FUZE Bristol.</p>
+        </div>
+
+        <a href="CV/CV.pdf" target="_blank" download> </a>
       </div>
 
     </div>
 
-    <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
+    <div class="iconcon">
+      <div class="icon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
+    </div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
-  /* display: flex; */
-    /* width: 300px; */
     justify-content: flex-end;
     flex-direction: row;
     align-content: flex-end;
-    /* position: fixed; */
     flex-wrap: nowrap;">
+
       <div class="cv"> <svg>
           <!--?xml version="1.0" encoding="utf-8"?-->
 
@@ -124,85 +126,79 @@
   </div>
 
 
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+
+
+  <div id="main2">
+
+
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-    <div id="main2">
+
+    <div class="imgtop">
+      <img width="100%" height="100%" src="MEDIAFUZE/REDLIGHT.png" alt="">
+
+    </div>
 
 
-    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+  <div class="container">
+  <!-- heading text -->
+  <div class="image-gallery" style="width:100%;">
+    <div style="width:100%;" class="column">
+      <div class="image-item">
+        <video style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/REDLIGHTMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+        <img src="MEDIAFUZE/MAP.png" style="width: 100%" style="border-radius:5px; margin:5%;" alt=""></img>
+        <video style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
-<div class="concontainer">
-<div class="container">
-  <div style="margin-right:10px;"class="imgtop">
-    <img width="100%" height="100%"src="MEDIAFUZE/REDLIGHT.png" alt="">
-
-
-</div>
-</div>
-
-    <div class="container">
-      <!-- heading text -->
-      <div class="image-gallery">
-        <div class="column">
-          <div class="image-item">
-</div>
-</div>
-</div>
+      </div>
+    </div>
 
 
-        </div>
+    <div style="width: 100%;" class="column">
+      <div class="image-item">
 
-        <div class="column">
-          <div     style="display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;"
-} class="image-item">
+        <img style="width: 100%; height: 100%; margin-bottom: 5%;" src="MEDIAFUZE/A3.png" alt=""></img>
+        <img src="MEDIAFUZE/flyer1.png" style="width: 100%; margin-bottom: 5%;" alt="">
+        <img style="margin-bottom: 5%;" src="MEDIAFUZE/HEADER5.png" alt="">
+        <img src="MEDIAFUZE/GRAPHIC.png" alt="">
+      </div>
+    </div>
 
-            <video style="width: 50% ; height: 50%; border-radius:5px;" src="MEDIAFUZE/REDLIGHTMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-            <img style="width: 50%; height=100%; margin-bottom: 5%;" src="MEDIAFUZE/A3.png" alt="">
-            <img src="MEDIAFUZE/MAP.png"; style="width: 50%" style="border-radius:5px; margin:5%;"alt="">
-            <video style="width: 50% ; height: 50%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-            <img src="MEDIAFUZE/flyer1.png"; style="width: 50%; margin: 5%;" alt="">
-
-          <img style="margin-bottom: 5%;"src="MEDIAFUZE/HEADER5.png" alt="">
-          <img src="MEDIAFUZE/GRAPHIC.png" alt="">
-
-</DIV>
-</DIV>
-</DIV>
-</DIV>
-
-
-
-<hr>
-
-<div class="bottom">
-
-  <form>
-   <input type="button" value="Go back!" onclick="history.back()">
-  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  </div>
 </div>
 
-</div>
-</div>
 
-<script>
-/* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-  document.getElementById("main2").style.marginLeft = "250px";
-}
 
-/* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-  document.getElementById("main2").style.marginLeft = "0";
-}  </script>
+
+  <hr>
+
+  <div class="bottom">
+
+    <form>
+      <input type="button" value="Go back!" onclick="history.back()">
+    </form>
+    <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  </div>
+
+  </div>
+  </div>
+</div>
+  <script>
+    /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+      document.getElementById("main2").style.marginLeft = "250px";
+    }
+
+    /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("main").style.marginLeft = "0";
+      document.getElementById("main2").style.marginLeft = "0";
+    }
+  </script>
 
 </body>
 
