--- a/heat.html
+++ b/heat.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="styles/stylesconq.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -18,39 +18,37 @@
 <body>
 
 
-  <div class="sticky" style="    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;">
+  <div class="sticky">
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
       <a href="fuze.html">FUZE</a>
-      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
-      <a href="metoo.html">#MeToo</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
-      <a href="wig.html">When It's Gone</a>
+      <a href="wig.html">Plug-In</a>
       <a href="heat.html">Heat Death</a>
       <a href="outhere.html">Out There</a>
-      <a href="knowing.html">Knowing Me, Knowing You</a>
 
     </div>
 
     <!-- Use any element to open the sidenav -->
     <div class="opencon">
-    <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
-<div id="main">
+      <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
+        <path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z" /></svg>
+    </div>
+    <div id="main">
       <div class="head">
-      <h1 style="width: 160px;"> Heat Death </h1>
-      <div class="aboutcontainer"><p  class="about"> Zine created based on The Uninhabitable Earth by David Wallace-Wells. </p> </div>
-      <a href="CV/CV.pdf" target="_blank" download> </a>
+        <h1 style="width: 160px;"> Heat Death </h1>
+        <div class="aboutcontainer">
+          <p class="about"> Zine created based on The Uninhabitable Earth by David Wallace-Wells. </p>
+        </div>
+        <a href="CV/CV.pdf" target="_blank" download> </a>
       </div>
-</div>
+    </div>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
@@ -127,63 +125,57 @@
   </div>
 
 
-    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-    <div id="main2">
+  <div id="main2">
 
 
 
 
-  <div class="carouselcon">
-  <div id="carousel">
-    <div class="slide">
-      <img class="cover" src="MEDIAHEAT/mock1.png" alt="Alone Cover">
+    <div class="container">
+      <div class="image-gallery">
+        <div style="width: 100%;" class="column">
+          <div class="image-item">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock1.png" alt="Alone Cover">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock2.png" alt="Alone Cover">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock4.png" alt="Alone Cover">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock5.png" alt="Alone Cover">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock6.png" alt="Alone Cover">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock7.png" alt="Alone Cover">
+            <img style="width:100%; height: 100%;"class="cover" src="MEDIAHEAT/mock8.png" alt="Alone Cover">
+
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="slide">
-      <img class="cover" src="MEDIAHEAT/mock2.png" alt="Alone Cover">
-    </div>
-    <div class="slide">
-    <img class="cover" src="MEDIAHEAT/mock4.png" alt="Alone Cover">
-  </div>
-  <div class="slide">
-    <img class="cover" src="MEDIAHEAT/mock5.png" alt="Alone Cover">
-  </div>
-  <div class="slide">
-    <img class="cover" src="MEDIAHEAT/mock6.png" alt="Alone Cover">
-  </div>
-  <div class="slide">
-    <img class="cover" src="MEDIAHEAT/mock7.png" alt="Alone Cover">
-  </div>
 
-  <div class="slide">
-    <img class="cover" src="MEDIAHEAT/mock8.png" alt="Alone Cover">
-  </div>
+        <hr>
 
-</div>
-</div>
-<hr>
+        <div class="bottom">
 
-<div class="bottom">
+          <form>
+            <input type="button" value="Go back!" onclick="history.back()">
+          </form>
+          <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+        </div>
 
-  <form>
-   <input type="button" value="Go back!" onclick="history.back()">
-  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
-</div>
+      </div>
+      <script>
+        /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "250px";
+          document.getElementById("main").style.marginLeft = "250px";
+          document.getElementById("main2").style.marginLeft = "250px";
+        }
 
-</div>
-<script>
-/* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-  document.getElementById("main2").style.marginLeft = "250px";}
-
-/* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-  document.getElementById("main2").style.marginLeft = "0";}  </script>
+        /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+          document.getElementById("main").style.marginLeft = "0";
+          document.getElementById("main2").style.marginLeft = "0";
+        }
+      </script>
 
 
 
