--- a/outhere.html
+++ b/outhere.html
@@ -8,42 +8,40 @@
 
   <link rel="stylesheet" href="styles/out.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
-  <div class="sticky" style="    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;">
+  <div class="sticky">
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
-      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
-      <a href="metoo.html">#MeToo</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
-      <a href="wig.html">When It's Gone</a>
+      <a href="wig.html">Plug-In</a>
       <a href="heat.html">Heat Death</a>
-      <a href="#knowing.html">Knowing Me, Knowing You</a>
 
     </div>
 
     <!-- Use any element to open the sidenav -->
     <div class="opencon">
-    <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
-<div id="main">
+      <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
+        <path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z" /></svg>
+    </div>
+    <div id="main">
       <div class="head">
-      <h1 style="width: 145px"> Out There </h1>
-      <div class="aboutcontainer"><p  class="about"> Interview with Joe Blandamer and Christopher Childs, professional stop
-motion designers.</p> </div>
-      <a href="CV/CV.pdf" target="_blank" download> </a>
+        <h1 style="width: 145px"> Out There </h1>
+        <div class="aboutcontainer">
+          <p class="about"> Interview with Joe Blandamer and Christopher Childs, professional stop
+            motion designers.</p>
+        </div>
+        <a href="CV/CV.pdf" target="_blank" download> </a>
       </div>
 
     </div>
@@ -124,70 +122,75 @@ motion designers.</p> </div>
   </div>
 
 
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+
+
+  <div id="main2">
+
+
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
     <div id="main2">
 
 
-    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+      <div id="carousel">
+        <div class="slide">
+          <img class="cover" src="MEDIAOUTTHER/1.png" alt="Alone Cover">
+        </div>
+        <div class="slide">
+          <img class="cover" src="MEDIAOUTTHER/2.png" alt="Alone Cover">
+        </div>
+        <div class="slide">
+          <img class="cover" src="MEDIAOUTTHER/3.png" alt="Alone Cover">
+        </div>
+        <div class="slide">
+          <img class="cover" src="MEDIAOUTTHER/4.png" alt="Alone Cover">
+        </div>
+        <div class="slide">
+          <img class="cover" src="MEDIAOUTTHER/5.png" alt="Alone Cover">
+        </div>
+        <div class="slide">
+          <img class="cover" src="MEDIAOUTTHER/6.png" alt="Alone Cover">
+        </div>
+        <div class="slide">
+        <div class="vidcontainer" style="display: flex;
+      justify-content: center;">
 
 
-    <div id="main2">
+          <iframe src="https://player.vimeo.com/video/499726400?h=dd3f2d0150" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
+        </div>
+
+      </div>
 
 
-  <div id="carousel">
-    <div class="slide">
-      <img class="cover" src="MEDIAOUTTHER/1.png" alt="Alone Cover">
+      <hr>
+
+      <div class="bottom">
+
+        <form>
+          <input type="button" value="Go back!" onclick="history.back()">
+        </form>
+        <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+      </div>
+
     </div>
-    <div class="slide">
-      <img class="cover" src="MEDIAOUTTHER/2.png" alt="Alone Cover">
-    </div>
-    <div class="slide">
-    <img class="cover" src="MEDIAOUTTHER/3.png" alt="Alone Cover">
-  </div>
-  <div class="slide">
-    <img class="cover" src="MEDIAOUTTHER/4.png" alt="Alone Cover">
-  </div>
-  <div class="slide">
-    <img class="cover" src="MEDIAOUTTHER/5.png" alt="Alone Cover">
-  </div>
-  <div class="slide">
-    <img class="cover" src="MEDIAOUTTHER/6.png" alt="Alone Cover">
-  </div>
-</div>
+    <script>
+      /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+      function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+        document.getElementById("main2").style.marginLeft = "250px";
+      }
 
-<div class="vidcontainer" style="display: flex;
-    justify-content: center;">
-
-
-<iframe src="https://player.vimeo.com/video/499726400?h=dd3f2d0150" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-
-</div>
-
-<hr>
-
-<div class="bottom">
-
-  <form>
-   <input type="button" value="Go back!" onclick="history.back()">
-  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
-</div>
-
-</div>
-<script>
-/* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-  document.getElementById("main2").style.marginLeft = "250px";
-}
-
-/* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-  document.getElementById("main2").style.marginLeft = "0";}  </script>
+      /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+      function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+        document.getElementById("main2").style.marginLeft = "0";
+      }
+    </script>
 
 
 </body>
