--- a/outhere.html
+++ b/outhere.html
@@ -125,7 +125,6 @@
   <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-  <div id="main2">
 
 
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
@@ -134,26 +133,23 @@
     <div id="main2">
 
 
-      <div id="carousel">
-        <div class="slide">
-          <img class="cover" src="MEDIAOUTTHER/1.png" alt="Alone Cover">
-        </div>
-        <div class="slide">
-          <img class="cover" src="MEDIAOUTTHER/2.png" alt="Alone Cover">
-        </div>
-        <div class="slide">
-          <img class="cover" src="MEDIAOUTTHER/3.png" alt="Alone Cover">
-        </div>
-        <div class="slide">
-          <img class="cover" src="MEDIAOUTTHER/4.png" alt="Alone Cover">
-        </div>
-        <div class="slide">
-          <img class="cover" src="MEDIAOUTTHER/5.png" alt="Alone Cover">
-        </div>
-        <div class="slide">
-          <img class="cover" src="MEDIAOUTTHER/6.png" alt="Alone Cover">
-        </div>
-        <div class="slide">
+      <div class="container">
+        <div class="image-gallery">
+          <div style="width: 100%;" class="column">
+
+          <img  style="width: 100%; "src="MEDIAOUTTHER/1.png" alt="Alone Cover">
+          <img  style="width: 100%; "src="MEDIAOUTTHER/3.png" alt="Alone Cover">
+          <img  style="width: 100%; "src="MEDIAOUTTHER/4.png" alt="Alone Cover">
+      </div>
+
+      <div style="width: 100%;" class="column">
+        <img style="width: 100%;" src="MEDIAOUTTHER/2.png" alt="Alone Cover">
+        <img  style="width: 100%; "src="MEDIAOUTTHER/5.png" alt="Alone Cover">
+        <img  style="width: 100%; "src="MEDIAOUTTHER/6.png" alt="Alone Cover">
+
+    </div>
+  </div>
+</div>
         <div class="vidcontainer" style="display: flex;
       justify-content: center;">
 
